1.txt
Running `/Users/runner/.rustup/toolchains/stable-aarch64-apple-darwin/bin/rustc --crate-name mira --edition=2021 src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C opt-level=3 -C panic=abort -C linker-plugin-lto -C codegen-units=1 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=307583ef9a9efdd6 -C extra-filename=-43c4230763914664 --out-dir /Users/runner/work/Mira/Mira/target/release/deps -C strip=symbols -L dependency=/Users/runner/work/Mira/Mira/target/release/deps --extern bytemuck=/Users/runner/work/Mira/Mira/target/release/deps/libbytemuck-f97efd382ebd415f.rmeta --extern chrono=/Users/runner/work/Mira/Mira/target/release/deps/libchrono-efa4f8fbb394304f.rmeta --extern env_logger=/Users/runner/work/Mira/Mira/target/release/deps/libenv_logger-73182c1ade090ad5.rmeta --extern fern=/Users/runner/work/Mira/Mira/target/release/deps/libfern-f452aac816fe3881.rmeta --extern image=/Users/runner/work/Mira/Mira/target/release/deps/libimage-3f27777773187b65.rmeta --extern log=/Users/runner/work/Mira/Mira/target/release/deps/liblog-872650c1170d1810.rmeta --extern nokhwa=/Users/runner/work/Mira/Mira/target/release/deps/libnokhwa-e5cacd3e2ed3da8b.rlib --extern num_cpus=/Users/runner/work/Mira/Mira/target/release/deps/libnum_cpus-f148dd14c84a3db5.rmeta --extern serde=/Users/runner/work/Mira/Mira/target/release/deps/libserde-8f33a385089cc33a.rmeta --extern tokio=/Users/runner/work/Mira/Mira/target/release/deps/libtokio-8c017894e7dd8a20.rmeta --extern toml=/Users/runner/work/Mira/Mira/target/release/deps/libtoml-81b4054dcfba2170.rmeta --extern wgpu=/Users/runner/work/Mira/Mira/target/release/deps/libwgpu-ebcd41d0a44b62c2.rmeta --extern winit=/Users/runner/work/Mira/Mira/target/release/deps/libwinit-ddde42564dd9e82a.rmeta -L native=/Users/runner/work/Mira/Mira/target/release/build/mozjpeg-sys-aea62cebcb14a2ed/out -L native=/Users/runner/work/Mira/Mira/target/release/build/mozjpeg-sys-aea62cebcb14a2ed/out -L native=/Users/runner/work/Mira/Mira/target/release/build/objc_exception-b67c2778d9ef7553/out`
error[E0308]: mismatched types
  --> src/event.rs:76:47
   |
76 |                 self.handle_modifiers_changed(*modifiers);
   |                      ------------------------ ^^^^^^^^^^ expected `ModifiersState`, found `Modifiers`
   |                      |
   |                      arguments to this method are incorrect
   |
note: method defined here
  --> src/event.rs:96:8
   |
96 |     fn handle_modifiers_changed(&mut self, modifiers: ModifiersState) {
   |        ^^^^^^^^^^^^^^^^^^^^^^^^            -------------------------

error[E0499]: cannot borrow `*self` as mutable more than once at a time
   --> src/camera/manager.rs:236:51
    |
200 |         let camera = self.camera.as_mut().unwrap(); // 已在上层检查过
    |                      ----------- first mutable borrow occurs here
...
203 |             match camera.frame() {
    |                   ------ first borrow later used here
...
236 |                         if let Err(restart_err) = self.restart_video_stream() {
    |                                                   ^^^^ second mutable borrow occurs here

Some errors have detailed explanations: E0308, E0499.
For more information about an error, try `rustc --explain E0308`.
error: could not compile `mira` (lib) due to 2 previous errors

Caused by:
  process didn't exit successfully: `/Users/runner/.rustup/toolchains/stable-aarch64-apple-darwin/bin/rustc --crate-name mira --edition=2021 src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C opt-level=3 -C panic=abort -C linker-plugin-lto -C codegen-units=1 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=307583ef9a9efdd6 -C extra-filename=-43c4230763914664 --out-dir /Users/runner/work/Mira/Mira/target/release/deps -C strip=symbols -L dependency=/Users/runner/work/Mira/Mira/target/release/deps --extern bytemuck=/Users/runner/work/Mira/Mira/target/release/deps/libbytemuck-f97efd382ebd415f.rmeta --extern chrono=/Users/runner/work/Mira/Mira/target/release/deps/libchrono-efa4f8fbb394304f.rmeta --extern env_logger=/Users/runner/work/Mira/Mira/target/release/deps/libenv_logger-73182c1ade090ad5.rmeta --extern fern=/Users/runner/work/Mira/Mira/target/release/deps/libfern-f452aac816fe3881.rmeta --extern image=/Users/runner/work/Mira/Mira/target/release/deps/libimage-3f27777773187b65.rmeta --extern log=/Users/runner/work/Mira/Mira/target/release/deps/liblog-872650c1170d1810.rmeta --extern nokhwa=/Users/runner/work/Mira/Mira/target/release/deps/libnokhwa-e5cacd3e2ed3da8b.rlib --extern num_cpus=/Users/runner/work/Mira/Mira/target/release/deps/libnum_cpus-f148dd14c84a3db5.rmeta --extern serde=/Users/runner/work/Mira/Mira/target/release/deps/libserde-8f33a385089cc33a.rmeta --extern tokio=/Users/runner/work/Mira/Mira/target/release/deps/libtokio-8c017894e7dd8a20.rmeta --extern toml=/Users/runner/work/Mira/Mira/target/release/deps/libtoml-81b4054dcfba2170.rmeta --extern wgpu=/Users/runner/work/Mira/Mira/target/release/deps/libwgpu-ebcd41d0a44b62c2.rmeta --extern winit=/Users/runner/work/Mira/Mira/target/release/deps/libwinit-ddde42564dd9e82a.rmeta -L native=/Users/runner/work/Mira/Mira/target/release/build/mozjpeg-sys-aea62cebcb14a2ed/out -L native=/Users/runner/work/Mira/Mira/target/release/build/mozjpeg-sys-aea62cebcb14a2ed/out -L native=/Users/runner/work/Mira/Mira/target/release/build/objc_exception-b67c2778d9ef7553/out` (exit status: 1)
warning: build failed, waiting for other jobs to finish...
Error: Process completed with exit code 101.